Resolve svgr/webpack to ^5.1.0

--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "@svgr/webpack": "^5.1.0"
   }
 }
